--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -11,7 +11,7 @@
         <br/><br/>
         <textarea name="descriptiion" placeholder="Enter descriptiion" ></textarea>
         <br/><br/>
-        <input name="image" placeholder="Enter image url/link" type="text">
+        <input name="image" placeholder="Enter image url" type="text">
         <br/><br/>
         <input name="price" placeholder="Enter price" type="number">
         <br/><br/>
