--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -7,17 +7,17 @@
 </head>
 <body>
     <form method="post" action="/listings">
-        <input name="title" placeholder="Enter title" type="text">
+        <input name="listing[title]" placeholder="Enter title" type="text">
         <br/><br/>
-        <textarea name="descriptiion" placeholder="Enter descriptiion" ></textarea>
+        <textarea name="listing[description]" placeholder="Enter description" ></textarea>
         <br/><br/>
-        <input name="image" placeholder="Enter image url" type="text">
+        <input name="listing[image]" placeholder="Enter image url" type="text">
         <br/><br/>
-        <input name="price" placeholder="Enter price" type="number">
+        <input name="listing[price]" placeholder="Enter price" type="number">
         <br/><br/>
-        <input name="country" placeholder="Enter country" type="text">
+        <input name="listing[country]" placeholder="Enter country" type="text">
         <br/><br/>
-        <input name="location" placeholder="Enter location" type="text">
+        <input name="listing[location]" placeholder="Enter location" type="text">
         <br/><br/>
 
         <button>Add</button>
