--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container listing-container">
     <h2 class="text-center mb-4">Create a New Listing</h2>
     <form method="post" action="/listings" class="w-50 mx-auto p-4 shadow rounded bg-white">
         <div class="mb-3">
@@ -11,7 +11,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Image Link</label>
-            <input name="listing[image]" class="form-control" placeholder="enter image URL/Link">
+            <input name="listing[image]" class="form-control" placeholder="Enter image URL/Link">
         </div>
         <div class="row mb-3">
             <div class="col">
@@ -32,4 +32,3 @@
         </div>
     </form>
 </div>
-    
