--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -53,6 +53,7 @@
             background-color: #000;
         }
     </style>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <nav class="navbar">
