--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,11 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">WanderLust</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
+      <!-- Left nav links -->
+      <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
         </li>
@@ -16,6 +19,13 @@
           <a class="nav-link" href="/listings/new">Add New Listing</a>
         </li>
       </ul>
+
+      <!-- Auth buttons on right -->
+      <div class="d-flex">
+        <a class="btn btn-outline-light me-2" href="/signup">Sign up</a>
+        <a class="btn btn-outline-light me-2" href="/login">Log in</a>
+        <a class="btn btn-danger" href="/logout">Log out</a>
+      </div>
     </div>
   </div>
 </nav>
