--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,7 +1,7 @@
 <!-- views/listings/edit.ejs -->
 <div class="container listing-container">
     <h2 class="text-center mb-4">Edit Listing</h2>
-    <form method="post" action="/listings/<%= listing.id %>?_method=PUT" class="w-50 mx-auto p-4 shadow rounded bg-white needs-validation" novalidate>
+    <form method="post" action="/listings/<%= listing.id %>?_method=PUT" class="w-50 mx-auto p-4 shadow rounded bg-white needs-validation" novalidate enctype="multipart/form-data">
         
         <!-- Title -->
         <div class="mb-3">
@@ -34,11 +34,11 @@
             <label class="form-label">Image Link</label>
             <input 
                 name="listing[image]" 
-                type="text"
+                type="file"
                 class="form-control" 
                 placeholder="Enter image URL/Link"
                 value="<%= listing.image && listing.image.url ? listing.image.url : '' %>" 
-                required
+                
             >
             <div class="invalid-feedback">Please provide an image URL.</div>
         </div>
